Prepare for itch-Redirect

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+     <title>Endless Voyage</title>
+     <meta charset="UTF-8" />
+     <meta http-equiv="refresh" content="0; URL=https://endlessvoyage.itch.io/endlessvoyage" />
+   </head>
+   <body>
+   </body>
+</html>
